workloads/applications/base/camel-time-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: camel-time
  name: camel-time
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: camel-time-app-sandbox-ui
